fix spacing

--- a/src/components/Tree/Tree.scss
+++ b/src/components/Tree/Tree.scss
@@ -63,6 +63,7 @@
       .ant-tree-switcher {
         display: flex;
         align-items: center;
+        width: unset;
       }
       .ant-tree-checkbox {
         margin: 0px;
